# Catena

./: .gitignore  README.md  pyproject.toml
docs/: IMPLEMENTATION.md  JOB_TEMPLATES.md  USAGE_SPEC.yaml  USER_GUIDE.md
src/catena/: __init__.py  client.py  config.py  models.py  paths.py  registry.py  server.py  slurm.py
src/catena.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/catena/runners/: __init__.py  base.py  cpp.py  delphes.py  mg5_pythia.py  python_run.py  sherpa.py
