[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catena"
version = "0.1.0"
description = "Catena CLI scaffolding for job orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0,<3.0",
  "typer>=0.12,<1.0",
]

[project.scripts]
catena-server = "catena.server:app"
catena-client = "catena.client:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
